@@ -3,6 +3,8 @@
     - Limit the content height for easier access to the Create/Update button.
   - Evidence:
     - Create a new issue (optionally) when creating new evidence
+  - Notes:
+    - Use the 'Default category' by default
   - Upgraded gems:
     - nokogiri, rails
   - Bugs fixes:
